# CppTic

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  cell.cpp  cell.h  constant.cpp  constant.h  game.cpp  game.h
